src/objects/Apttus_Config2__ServiceLocation__c.object
<CustomObject>
    <fields>
        <fullName>Apttus_Config2__City__c</fullName>
        <description>The city associated with the location.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Country__c</fullName>
        <description>The country associated with the location.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__County__c</fullName>
        <description>The county associated with the location</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The county associated with the location</inlineHelpText>
        <label>County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PostalCode__c</fullName>
        <description>The location’s postal or ZIP code</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__State__c</fullName>
        <description>The state associated with the location.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Street__c</fullName>
        <description>The street address associated with the location.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Street</label>
        <type>TextArea</type>
    </fields>
</CustomObject>